--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,9 +1,51 @@
+/* Navbar starts here */
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 24px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-brand a {
+  width: 100px;
+  object-fit: contain;
+  margin: 0 20px;
+  margin-top: 5px;
+  color: black;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* .nav-list {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-item {
+  margin: 0 1rem;
+}
+
+.nav-item a {
+  color: black;
+  text-decoration: none;
+  font-size: 1rem;
+}
+
+.nav-item a:hover {
+  text-decoration: underline;
+} */
+
 .login-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #f9f9f9;
+  background-color: whitesmoke;
 }
 
 .login-form {
