--- a/client/src/styles/Habits.css
+++ b/client/src/styles/Habits.css
@@ -1,27 +1,3 @@
-/* Resetting styles to avoid conflicts */
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
-body,
-#root,
-.dashboard-container {
-  height: 100%;
-  min-height: 100vh;
-}
-
-.habits-container {
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-} */
-
 .main {
   /* background-color: whitesmoke; */
 }
@@ -112,4 +88,15 @@ body,
 
 .habit-item button:hover {
   background-color: #c82333;
+}
+
+.habit-link {
+  text-decoration: none;
+  color: inherit;
+}
+
+.habit-item:hover .habit-link {
+  cursor: pointer;
+  text-decoration: underline;
+  color: #007bff;
 }
