--- a/client/src/styles/Login.css
+++ b/client/src/styles/Login.css
@@ -1,6 +1,6 @@
 /* Navbar starts here */
 
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -18,27 +18,6 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
-
-/* .nav-list {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
-}
-
-.nav-item {
-  margin: 0 1rem;
-}
-
-.nav-item a {
-  color: black;
-  text-decoration: none;
-  font-size: 1rem;
-}
-
-.nav-item a:hover {
-  text-decoration: underline;
-} */
 
 .login-container {
   display: flex;
@@ -106,4 +85,4 @@
 
 .signup-link a:hover {
   text-decoration: underline;
-}
+} */
