--- a/client/src/styles/NavBar.css
+++ b/client/src/styles/NavBar.css
@@ -1,4 +1,4 @@
-.navbar {
+/* .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -36,4 +36,4 @@
 
 .nav-item a:hover {
   text-decoration: underline;
-}
+} */
