--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -31,7 +31,7 @@ body,
 }
 
 .sidebar {
-  background-color: #1c1f23;
+  /* background-color: #1c1f23; */
   grid-column: 1 / 2;
   grid-row: 1 / 3;
   /* border: 1px solid red; Add borders for debugging */
