--- a/client/src/styles/DashboardHeader.css
+++ b/client/src/styles/DashboardHeader.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -43,4 +43,4 @@
 
 .header-logout:hover {
   background-color: #444;
-}
+} */
