--- a/client/src/styles/SideBar.css
+++ b/client/src/styles/SideBar.css
@@ -1,4 +1,8 @@
-.sidebar {
+.sidebar-profile {
+  height: 60px;
+}
+
+/* .sidebar {
   background-color: #2d2d2d;
   color: #fff;
   padding: 12px 30px;
@@ -80,4 +84,4 @@
 
 .sidebar-icon {
   margin-right: 8px;
-}
+} */
