changes signup page/form to use tailwind just like login page

--- a/client/src/styles/Signup.css
+++ b/client/src/styles/Signup.css
@@ -1,4 +1,4 @@
-.signup-container {
+/* .signup-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,4 +64,4 @@
 
 .login-link a:hover {
   text-decoration: underline;
-}
+} */
