--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -15,7 +15,7 @@ body,
 
 .dashboard-container {
   display: grid;
-  grid-template-columns: 300px 1fr;
+  grid-template-columns: 250px 1fr;
   grid-template-rows: 60px 1fr;
   grid-template-areas:
     none
@@ -24,17 +24,17 @@ body,
 }
 
 .header {
-  background-color: #fff;
+  /* background-color: red; */
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  /* border: 1px solid red; Add borders for debugging */
+  border: 1px solid red;
 }
 
 .sidebar {
   /* background-color: #1c1f23; */
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  /* border: 1px solid red; Add borders for debugging */
+  border: 1px solid red;
 }
 
 .main {
@@ -46,7 +46,7 @@ body,
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
   padding: 25px;
-  /* border: 1px solid red; Add borders for debugging */
+  border: 1px solid blue;
   grid-template-areas:
     "c1 c2 c3"
     "c4 c4 c5"
