--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -8,12 +8,12 @@
 html,
 body,
 #root,
-.dashboard-container {
+.app-container {
   height: 100%;
   min-height: 100vh;
 }
 
-.dashboard-container {
+.app-container {
   display: grid;
   grid-template-columns: 250px 1fr;
   grid-template-rows: 60px 1fr;
@@ -37,7 +37,7 @@ body,
   border: 1px solid red;
 }
 
-.main {
+.dashboard-main {
   background-color: #c3c5ca;
   grid-column: 2 / 3;
   grid-row: 2 / 3;
