--- a/client/src/styles/Categories.css
+++ b/client/src/styles/Categories.css
@@ -1,4 +1,4 @@
-.categories-container h1 {
+/* .categories-container h1 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
@@ -89,4 +89,4 @@
   cursor: pointer;
   text-decoration: underline;
   color: #007bff;
-}
+} */
