--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -27,14 +27,14 @@ body,
   /* background-color: red; */
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .sidebar {
   /* background-color: #1c1f23; */
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 .dashboard-main {
@@ -46,7 +46,7 @@ body,
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
   padding: 25px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   grid-template-areas:
     "c1 c2 c3"
     "c4 c4 c5"
