--- a/client/src/styles/Habits.css
+++ b/client/src/styles/Habits.css
@@ -1,8 +1,4 @@
-.main {
-  /* background-color: whitesmoke; */
-}
-
-.habits-container h1 {
+/* .habits-container h1 {
   margin-bottom: 20px;
   font-size: 24px;
   color: #333;
@@ -99,4 +95,4 @@
   cursor: pointer;
   text-decoration: underline;
   color: #007bff;
-}
+} */
