--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,4 +1,3 @@
-/* Resetting styles to avoid conflicts */
 * {
   margin: 0;
   padding: 0;
@@ -12,7 +11,7 @@ body,
   height: 100%;
   min-height: 100vh;
 }
-
+/*
 .app-container {
   display: grid;
   grid-template-columns: 250px 1fr;
@@ -24,17 +23,14 @@ body,
 }
 
 .header {
-  /* background-color: red; */
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  /* border: 1px solid red; */
 }
 
 .sidebar {
-  /* background-color: #1c1f23; */
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  /* border: 1px solid red; */
+
 }
 
 .dashboard-main {
@@ -46,7 +42,6 @@ body,
   grid-template-rows: 1fr 1fr 1fr;
   gap: 20px;
   padding: 25px;
-  /* border: 1px solid blue; */
   grid-template-areas:
     "c1 c2 c3"
     "c4 c4 c5"
@@ -92,4 +87,4 @@ body,
   .card {
     grid-area: initial !important;
   }
-}
+} */
